[gd_scene load_steps=25 format=3 uid="uid://c80nbk7u633n6"]

[ext_resource type="Script" path="res://menu/menu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://gnsovrtic7g4" path="res://menu/experiment.hdr" id="2_bpuaq"]
[ext_resource type="PackedScene" uid="uid://div25sd40yx1d" path="res://player/model/player.glb" id="3"]
[ext_resource type="AudioStream" uid="uid://bfq26n228ipa" path="res://menu/menu_intro_music.ogg" id="5"]
[ext_resource type="Texture2D" uid="uid://ckwsj2km1edy6" path="res://menu/tps_demo.png" id="6"]
[ext_resource type="Texture2D" uid="uid://c6gsd2mdmea8w" path="res://menu/floor.png" id="6_qhdg0"]
[ext_resource type="FontFile" uid="uid://b8tvpu085c6v4" path="res://menu/button_font.tres" id="13"]
[ext_resource type="StyleBox" uid="uid://dd2346b4rjg8j" path="res://menu/button_pressed.tres" id="14"]
[ext_resource type="StyleBox" uid="uid://b5jvmt5xa2afe" path="res://menu/button_normal.tres" id="15"]
[ext_resource type="StyleBox" uid="uid://b807o31rnpht1" path="res://menu/button_focus.tres" id="16"]
[ext_resource type="StyleBox" uid="uid://bsth0dexb32e8" path="res://menu/button_hover.tres" id="17"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_aosi0"]
panorama = ExtResource("2_bpuaq")

[sub_resource type="Sky" id="Sky_0dm4h"]
sky_material = SubResource("PanoramaSkyMaterial_aosi0")

[sub_resource type="Environment" id="2"]
background_mode = 2
sky = SubResource("Sky_0dm4h")
ambient_light_source = 2
ambient_light_color = Color(0.164706, 0.184314, 0.270588, 1)
glow_enabled = true
glow_levels/1 = 1.0
glow_levels/4 = 1.0
glow_levels/7 = 0.5
glow_mix = 0.153
glow_blend_mode = 4
glow_hdr_threshold = 0.36
fog_enabled = true
fog_light_color = Color(0, 0, 0, 1)
volumetric_fog_enabled = true
volumetric_fog_temporal_reprojection_enabled = false

[sub_resource type="FastNoiseLite" id="FastNoiseLite_6xg6v"]

[sub_resource type="NoiseTexture3D" id="NoiseTexture3D_gixss"]
noise = SubResource("FastNoiseLite_6xg6v")

[sub_resource type="FogMaterial" id="FogMaterial_e2dgj"]
density = 0.002
emission = Color(1, 2, 3, 1)
edge_fade = 1.0
density_texture = SubResource("NoiseTexture3D_gixss")

[sub_resource type="QuadMesh" id="3"]
size = Vector2(4096, 4096)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_froyn"]
albedo_color = Color(0.419608, 0.419608, 0.419608, 1)
albedo_texture = ExtResource("6_qhdg0")

[sub_resource type="AnimationNodeBlend2" id="5"]
resource_local_to_scene = true
filter_enabled = true
filters = ["Robot_Skeleton/Skeleton3D:eyelid.d.L", "Robot_Skeleton/Skeleton3D:eyelid.d.R", "Robot_Skeleton/Skeleton3D:eyelid.u.L", "Robot_Skeleton/Skeleton3D:eyelid.u.R", "Robot_Skeleton/Skeleton3D:eyes"]

[sub_resource type="AnimationNodeAnimation" id="6"]
resource_local_to_scene = true
animation = &"Idlecombatrest"

[sub_resource type="AnimationNodeAnimation" id="7"]
resource_local_to_scene = true
animation = &"eyes"

[sub_resource type="AnimationNodeBlendTree" id="8"]
resource_local_to_scene = true
graph_offset = Vector2(-776.416, 238.649)
nodes/Blend/node = SubResource("5")
nodes/Blend/position = Vector2(180, 120)
nodes/CombatRest/node = SubResource("6")
nodes/CombatRest/position = Vector2(-120, 100)
nodes/Eyes/node = SubResource("7")
nodes/Eyes/position = Vector2(-40, 220)
nodes/output/position = Vector2(420, 120)
node_connections = [&"Blend", 0, &"CombatRest", &"Blend", 1, &"Eyes", &"output", 0, &"Blend"]

[sub_resource type="Theme" id="9"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_color_disabled = Color(0.9, 0.9, 0.9, 0.2)
Button/colors/font_color_hover = Color(1, 1, 1, 1)
Button/colors/font_color_pressed = Color(1, 1, 1, 1)
Button/constants/h_separation = 2
Button/fonts/font = ExtResource("13")
Button/styles/disabled = null
Button/styles/focus = ExtResource("16")
Button/styles/hover = ExtResource("17")
Button/styles/normal = ExtResource("15")
Button/styles/pressed = ExtResource("14")
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_color_shadow = Color(0, 0, 0, 0)
Label/colors/font_outline_modulate = Color(1, 1, 1, 1)
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = ExtResource("13")
Label/styles/normal = null

[node name="Menu" type="Node"]
script = ExtResource("1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("2")

[node name="FogVolume" type="FogVolume" parent="WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.54524, 0.476703, 0.346051)
size = Vector3(16, 4, 16)
material = SubResource("FogMaterial_e2dgj")

[node name="PlayerModel" parent="." instance=ExtResource("3")]

[node name="SoundEffects" type="Node" parent="."]

[node name="Step" type="AudioStreamPlayer" parent="SoundEffects"]

[node name="Floor" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
mesh = SubResource("3")
surface_material_override/0 = SubResource("StandardMaterial3D_froyn")

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(0.967027, 0, 0.254675, -0.225291, 0.466312, 0.855452, -0.118758, -0.88462, 0.450936, 0.557445, 2.31204, 0.556668)
shadow_enabled = true

[node name="SpotLightBounce" type="SpotLight3D" parent="."]
transform = Transform3D(-0.967027, -1.26906e-07, -0.254675, 0.225291, 0.466312, -0.855451, 0.118758, -0.88462, -0.450936, -0.206581, -0.720626, 0.088479)
light_color = Color(1, 0.654902, 0.0509804, 1)
light_energy = 0.3
light_specular = 0.0

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.871624, -0.0363083, 0.488828, 0, 0.997253, 0.0740721, -0.490175, -0.064563, 0.86923, 0.0702285, 1.22404, 2.09675)

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")
autoplay = true

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../PlayerModel")
tree_root = SubResource("8")
anim_player = NodePath("../PlayerModel/AnimationPlayer")
parameters/Blend/blend_amount = 1.0

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 20.1403
offset_top = 5.03506
offset_right = 1044.14
offset_bottom = 238.035
texture = ExtResource("6")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.00106799
anchor_right = 1.00107
anchor_bottom = 1.0
theme = SubResource("9")

[node name="Main" type="Control" parent="UI"]
layout_mode = 1
anchor_left = -0.000673103
anchor_top = -0.00189865
anchor_right = 0.999327
anchor_bottom = 0.998101
offset_left = -4.10107
offset_top = 2.05054
offset_right = -4.10107
offset_bottom = 2.05054

[node name="Play" type="Button" parent="UI/Main"]
layout_mode = 0
offset_left = 100.0
offset_top = 390.0
offset_right = 400.0
offset_bottom = 440.0
theme_override_font_sizes/font_size = 30
text = "PLAY"
alignment = 0

[node name="PlayOnline" type="Button" parent="UI/Main"]
layout_mode = 0
offset_left = 100.0
offset_top = 490.0
offset_right = 400.0
offset_bottom = 540.0
theme_override_font_sizes/font_size = 30
text = "PLAY ONLINE"
alignment = 0

[node name="Settings" type="Button" parent="UI/Main"]
layout_mode = 0
offset_left = 100.0
offset_top = 590.0
offset_right = 400.0
offset_bottom = 640.0
theme_override_font_sizes/font_size = 30
text = "SETTINGS"
alignment = 0

[node name="Quit" type="Button" parent="UI/Main"]
layout_mode = 0
offset_left = 100.0
offset_top = 690.0
offset_right = 400.0
offset_bottom = 740.0
theme_override_font_sizes/font_size = 30
text = "QUIT"
alignment = 0

[node name="Online" type="Control" parent="UI"]
visible = false
anchors_preset = 0
anchor_left = -0.000673103
anchor_top = -0.00189865
anchor_right = 0.999327
anchor_bottom = 0.998101
offset_left = -4.10107
offset_top = 2.05054
offset_right = -4.10107
offset_bottom = 2.05054

[node name="Host" type="Button" parent="UI/Online"]
layout_mode = 0
offset_left = 100.0
offset_top = 490.0
offset_right = 400.0
offset_bottom = 540.0
theme_override_font_sizes/font_size = 30
text = "Host"
alignment = 0

[node name="Port" type="SpinBox" parent="UI/Online"]
layout_mode = 0
offset_left = 500.0
offset_top = 490.0
offset_right = 800.0
offset_bottom = 540.0
min_value = 1025.0
max_value = 49151.0
value = 4383.0

[node name="Connect" type="Button" parent="UI/Online"]
layout_mode = 0
offset_left = 100.0
offset_top = 590.0
offset_right = 400.0
offset_bottom = 640.0
theme_override_font_sizes/font_size = 30
text = "Connect"
alignment = 0

[node name="Address" type="LineEdit" parent="UI/Online"]
layout_mode = 0
offset_left = 500.0
offset_top = 590.0
offset_right = 800.0
offset_bottom = 640.0
theme_override_font_sizes/font_size = 30
text = "127.0.0.1"

[node name="Back" type="Button" parent="UI/Online"]
layout_mode = 0
offset_left = 100.0
offset_top = 690.0
offset_right = 400.0
offset_bottom = 740.0
theme_override_font_sizes/font_size = 30
text = "Back"
alignment = 0

[node name="Settings" type="VBoxContainer" parent="UI"]
visible = false
layout_mode = 0
anchor_left = 0.109896
anchor_top = 0.23148
anchor_right = 0.808854
anchor_bottom = 1.00278
theme_override_constants/separation = 8

[node name="DisplayMode" type="HBoxContainer" parent="UI/Settings"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="UI/Settings/DisplayMode"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "Display Mode:"

[node name="Windowed" type="Button" parent="UI/Settings/DisplayMode"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Window"

[node name="Fullscreen" type="Button" parent="UI/Settings/DisplayMode"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Fullscreen"

[node name="ExclusiveFullscreen" type="Button" parent="UI/Settings/DisplayMode"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Exclusive Fullscreen"

[node name="VSync" type="HBoxContainer" parent="UI/Settings"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="UI/Settings/VSync"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "Vertical Synchronization:"

[node name="Disabled" type="Button" parent="UI/Settings/VSync"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Disabled"

[node name="Enabled" type="Button" parent="UI/Settings/VSync"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Enabled"

[node name="Adaptive" type="Button" parent="UI/Settings/VSync"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Adaptive"

[node name="Mailbox" type="Button" parent="UI/Settings/VSync"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Mailbox"

[node name="MaxFPS" type="HBoxContainer" parent="UI/Settings"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="UI/Settings/MaxFPS"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "FPS Limit:"

[node name="30" type="Button" parent="UI/Settings/MaxFPS"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "30"

[node name="40" type="Button" parent="UI/Settings/MaxFPS"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "40"

[node name="60" type="Button" parent="UI/Settings/MaxFPS"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "60"

[node name="72" type="Button" parent="UI/Settings/MaxFPS"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "72"

[node name="90" type="Button" parent="UI/Settings/MaxFPS"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "90"

[node name="120" type="Button" parent="UI/Settings/MaxFPS"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "120"

[node name="144" type="Button" parent="UI/Settings/MaxFPS"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "144"

[node name="Unlimited" type="Button" parent="UI/Settings/MaxFPS"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Unlimited"

[node name="ResolutionScale" type="HBoxContainer" parent="UI/Settings"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="UI/Settings/ResolutionScale"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "Resolution Scale:"

[node name="UltraPerformance" type="Button" parent="UI/Settings/ResolutionScale"]
modulate = Color(0.376471, 1, 0.376471, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Ultra Performance"

[node name="Performance" type="Button" parent="UI/Settings/ResolutionScale"]
modulate = Color(0.376471, 1, 0.376471, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Performance"

[node name="Balanced" type="Button" parent="UI/Settings/ResolutionScale"]
modulate = Color(1, 1, 0.313726, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Balanced"

[node name="Quality" type="Button" parent="UI/Settings/ResolutionScale"]
modulate = Color(1, 1, 0.313726, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Quality"

[node name="UltraQuality" type="Button" parent="UI/Settings/ResolutionScale"]
modulate = Color(1, 0.627451, 0.25098, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Ultra Quality"

[node name="Native" type="Button" parent="UI/Settings/ResolutionScale"]
modulate = Color(1, 0.376471, 0.376471, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Native"

[node name="ScaleFilter" type="HBoxContainer" parent="UI/Settings"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="UI/Settings/ScaleFilter"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "Resolution Scale Filter:"

[node name="Bilinear" type="Button" parent="UI/Settings/ScaleFilter"]
modulate = Color(0.376471, 1, 0.376471, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Bilinear"

[node name="FSR1" type="Button" parent="UI/Settings/ScaleFilter"]
modulate = Color(1, 1, 0.313726, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "AMD FSR 1.0"

[node name="FSR2" type="Button" parent="UI/Settings/ScaleFilter"]
modulate = Color(1, 0.627451, 0.25098, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "AMD FSR 2.2"

[node name="HSeparator2" type="HSeparator" parent="UI/Settings"]
layout_mode = 2

[node name="TAA" type="HBoxContainer" parent="UI/Settings"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="UI/Settings/TAA"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 1
text = "Temporal Antialiasing:"

[node name="Disabled" type="Button" parent="UI/Settings/TAA"]
modulate = Color(0.376471, 1, 0.376471, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Disabled"

[node name="Enabled" type="Button" parent="UI/Settings/TAA"]
modulate = Color(1, 1, 0.313726, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Enabled"

[node name="MSAA" type="HBoxContainer" parent="UI/Settings"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="UI/Settings/MSAA"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 1
text = "Multisample Antialiasing:"

[node name="Disabled" type="Button" parent="UI/Settings/MSAA"]
modulate = Color(0.376471, 1, 0.376471, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Disabled"

[node name="2X" type="Button" parent="UI/Settings/MSAA"]
modulate = Color(1, 1, 0.313726, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "2×"

[node name="4X" type="Button" parent="UI/Settings/MSAA"]
modulate = Color(1, 0.627451, 0.25098, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "4×"

[node name="8X" type="Button" parent="UI/Settings/MSAA"]
modulate = Color(1, 0.376471, 0.376471, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "8×"

[node name="FXAA" type="HBoxContainer" parent="UI/Settings"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="UI/Settings/FXAA"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 1
text = "Fast Approximate Antialiasing:"

[node name="Disabled" type="Button" parent="UI/Settings/FXAA"]
modulate = Color(0.376471, 1, 0.376471, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Disabled"

[node name="Enabled" type="Button" parent="UI/Settings/FXAA"]
modulate = Color(0.376471, 1, 0.376471, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
keep_pressed_outside = true
text = "Enabled"

[node name="ShadowMapping" type="HBoxContainer" parent="UI/Settings"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="UI/Settings/ShadowMapping"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "Shadow Mapping:"

[node name="Disabled" type="Button" parent="UI/Settings/ShadowMapping"]
modulate = Color(0.376471, 1, 0.376471, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Disabled"

[node name="Enabled" type="Button" parent="UI/Settings/ShadowMapping"]
modulate = Color(1, 1, 0.313726, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Enabled"

[node name="GIType" type="HBoxContainer" parent="UI/Settings"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="UI/Settings/GIType"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "Global Illumination Type:"

[node name="LightmapGI" type="Button" parent="UI/Settings/GIType"]
modulate = Color(0.376471, 1, 0.376471, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "LightmapGI"

[node name="VoxelGI" type="Button" parent="UI/Settings/GIType"]
modulate = Color(1, 1, 0.313726, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "VoxelGI"

[node name="SDFGI" type="Button" parent="UI/Settings/GIType"]
modulate = Color(1, 0.627451, 0.25098, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "SDFGI"

[node name="GIQuality" type="HBoxContainer" parent="UI/Settings"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="UI/Settings/GIQuality"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "Global Illumination Quality:"

[node name="Disabled" type="Button" parent="UI/Settings/GIQuality"]
modulate = Color(0.376471, 1, 0.376471, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Disabled"

[node name="Low" type="Button" parent="UI/Settings/GIQuality"]
modulate = Color(1, 1, 0.313726, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Low"

[node name="High" type="Button" parent="UI/Settings/GIQuality"]
modulate = Color(1, 0.376471, 0.376471, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "High"

[node name="SSAO" type="HBoxContainer" parent="UI/Settings"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="UI/Settings/SSAO"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 1
text = "Screen-space Ambient Occlusion:"

[node name="Disabled" type="Button" parent="UI/Settings/SSAO"]
modulate = Color(0.376471, 1, 0.376471, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Disabled"

[node name="Medium" type="Button" parent="UI/Settings/SSAO"]
modulate = Color(1, 1, 0.313726, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Medium"

[node name="High" type="Button" parent="UI/Settings/SSAO"]
modulate = Color(1, 0.376471, 0.376471, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "High"

[node name="SSIL" type="HBoxContainer" parent="UI/Settings"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="UI/Settings/SSIL"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 1
text = "Screen-space Indirect Lighting:"

[node name="Disabled" type="Button" parent="UI/Settings/SSIL"]
modulate = Color(0.376471, 1, 0.376471, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Disabled"

[node name="Medium" type="Button" parent="UI/Settings/SSIL"]
modulate = Color(1, 0.627451, 0.25098, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Medium"

[node name="High" type="Button" parent="UI/Settings/SSIL"]
modulate = Color(1, 0.376471, 0.376471, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "High"

[node name="Bloom" type="HBoxContainer" parent="UI/Settings"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="UI/Settings/Bloom"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 1
text = "Bloom:"

[node name="Disabled" type="Button" parent="UI/Settings/Bloom"]
modulate = Color(0.376471, 1, 0.376471, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Disabled"

[node name="Enabled" type="Button" parent="UI/Settings/Bloom"]
modulate = Color(1, 1, 0.313726, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Enabled"

[node name="VolumetricFog" type="HBoxContainer" parent="UI/Settings"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="UI/Settings/VolumetricFog"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 1
text = "Volumetric Fog:"

[node name="Disabled" type="Button" parent="UI/Settings/VolumetricFog"]
modulate = Color(0.376471, 1, 0.376471, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Disabled"

[node name="Enabled" type="Button" parent="UI/Settings/VolumetricFog"]
modulate = Color(1, 1, 0.313726, 1)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Enabled"

[node name="RenderTest" type="HBoxContainer" parent="UI/Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Settings/RenderTest"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 1
text = "Render Test"

[node name="CheckBox" type="CheckBox" parent="UI/Settings/RenderTest"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="UI/Settings"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Actions" type="HBoxContainer" parent="UI/Settings"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Apply" type="Button" parent="UI/Settings/Actions"]
layout_mode = 2
size_flags_horizontal = 3
text = "Apply"

[node name="Cancel" type="Button" parent="UI/Settings/Actions"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="Loading" type="HBoxContainer" parent="UI"]
visible = false
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -135.0
offset_right = -130.0
offset_bottom = -100.0

[node name="Label" type="Label" parent="UI/Loading"]
layout_mode = 2
text = "Loading..."

[node name="Progress" type="ProgressBar" parent="UI/Loading"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="DoneTimer" type="Timer" parent="UI/Loading"]
wait_time = 0.5
one_shot = true

[connection signal="pressed" from="UI/Main/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="UI/Main/PlayOnline" to="." method="_on_play_online_pressed"]
[connection signal="pressed" from="UI/Main/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="UI/Main/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="UI/Online/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="UI/Online/Connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="UI/Online/Back" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="UI/Settings/Actions/Apply" to="." method="_on_apply_pressed"]
[connection signal="pressed" from="UI/Settings/Actions/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="timeout" from="UI/Loading/DoneTimer" to="." method="_on_loading_done_timer_timeout"]
